ganti mariadb ke mysql

--- a/pom.xml
+++ b/pom.xml
@@ -119,13 +119,13 @@
             <version>2.6.11</version>
         </dependency>
 
-        <!-- mariadb-->
+        <!-- mysql-->
         <dependency>
-            <groupId>org.mariadb.jdbc</groupId>
-            <artifactId>mariadb-java-client</artifactId>
-            <version>1.3.6</version>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+            <version>5.1.38</version>
         </dependency>
-
+        
     </dependencies>
   
     <build>
