--- a/.gitignore
+++ b/.gitignore
@@ -8,7 +8,7 @@ release.properties
 dependency-reduced-pom.xml
 buildNumber.properties
 .mvn/timing.properties
-
+logs/*
 
 ### NetBeans ###
 nbproject/private/
