--- a/pom.xml
+++ b/pom.xml
@@ -113,6 +113,16 @@
             <artifactId>hibernate-envers</artifactId>
             <version>5.1.0.Final</version>
         </dependency>
+        <dependency>
+            <groupId>org.hibernate</groupId>
+            <artifactId>hibernate-search-orm</artifactId>
+            <version>5.5.2.Final</version>
+        </dependency>
+        <dependency>
+            <groupId>org.infinispan</groupId>
+            <artifactId>infinispan-directory-provider</artifactId>
+            <version>8.2.0.Final</version>
+        </dependency>
         
         <!-- ehcache-->
         <dependency>
