tambah konfigurasi application.properties

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -23,3 +23,7 @@ spring.datasource.dialect = org.hibernate.dialect.MySQL5InnoDBDialect
 spring.datasource.show_sql = true
 spring.datasource.format_sql = true
 spring.datasource.hbm2ddl.auto = update
+
+# hibernate search
+hibernate.search.default.directory_provider = filesystem
+hibernate.search.default.indexBase = /home/rizki/lucene/indexes
