update konfigurasi database

--- a/src/test/resources/application-test.properties
+++ b/src/test/resources/application-test.properties
@@ -10,7 +10,7 @@
  ##
 
 spring.datasource.driverClassName = org.h2.Driver
-spring.datasource.url = jdbc:h2:file:./database/inventory;mode=mysql?autoReconnect=true
+spring.datasource.url = jdbc:h2:file:./database/inventory
 spring.datasource.username = root
 spring.datasource.password = root
 spring.datasource.poolName = SpringHikariCP
