--- a/.gitignore
+++ b/.gitignore
@@ -9,6 +9,7 @@ dependency-reduced-pom.xml
 buildNumber.properties
 .mvn/timing.properties
 logs/*
+database/
 
 ### NetBeans ###
 nbproject/private/
