--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,8 +9,8 @@
  # 
  ##
  
-spring.datasource.driverClassName = com.mysql.jdbc.Driver
-spring.datasource.url = jdbc:mysql://127.0.0.1:3306/inventory?autoReconnect=true
+spring.datasource.driverClassName = org.h2.Driver
+spring.datasource.url = jdbc:h2:file:./database/inventory
 spring.datasource.username = root
 spring.datasource.password = root
 spring.datasource.poolName = SpringHikariCP
@@ -19,7 +19,7 @@ spring.datasource.minimumIdle = 3
 spring.datasource.maxLifetime = 2000000
 spring.datasource.connectionTimeout = 30000
 spring.datasource.idleTimeout = 30000
-spring.datasource.dialect = org.hibernate.dialect.MySQL5InnoDBDialect
+spring.datasource.dialect = org.hibernate.dialect.H2Dialect
 spring.datasource.show_sql = true
 spring.datasource.format_sql = true
 spring.datasource.hbm2ddl.auto = update
