--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,12 @@
 
     <dependencies>
         
+        <dependency>
+            <groupId>com.jidesoft</groupId>
+            <artifactId>jide-oss</artifactId>
+            <version>3.6.13</version>
+        </dependency>
+        
         <!--slf4j-->
         <dependency>
             <groupId>org.slf4j</groupId>
